--- a/src/components/AddTodoButton/AddTodoButton.module.scss
+++ b/src/components/AddTodoButton/AddTodoButton.module.scss
@@ -1,13 +1,14 @@
+@import "scss/_variables.scss";
+@import "scss/_mixins.scss";
+
 .addTodoButton {
     position: absolute;
     bottom: 35px;
     left: 50%;
     transform: translateX(-50%);
-    background: #5f33e1;
+    background: $Purple_heart;
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex-center;
 }
