--- a/src/containers/Todos/Todos.module.scss
+++ b/src/containers/Todos/Todos.module.scss
@@ -1,14 +1,28 @@
+@import "scss/_variables.scss";
+
 .todos {
     width: calc(100% - 44px);
-    height: 100vh;
-    padding: 0 22px;
+    max-height: calc(100vh - 80px);
+    height: calc(100vh - 80px);
+    padding: 30px 22px 120px 22px;
+    position: relative;
     background-repeat: no-repeat;
     background-size: cover;
     overflow-y: scroll;
+    background-image: url("../../assets/background.png");
+    .empty {
+        font-size: 20px;
+        color: $Shark;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
 
 @supports (height: 100dvh) {
     .todos {
-        height: calc(100dvh - 80px);
+        max-height: calc(100dvh - 230px);
+        height: calc(100dvh - 180px);
     }
 }
