--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,399;1,399&display=swap");
+
 .App {
     height: 100%;
     padding-bottom: env(safe-area-inset-bottom);
+    font-family: "Red Hat Display", sans-serif;
     .desktopVersion {
         height: 100vh;
         width: 100%;
