--- a/src/containers/Todos/Todos.module.scss
+++ b/src/containers/Todos/Todos.module.scss
@@ -17,6 +17,8 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        width: 80%;
+        text-align: center;
     }
 }
 
